fix: map-area-scale-button z-index

--- a/src/assets/styles/components/Home/MapView.scss
+++ b/src/assets/styles/components/Home/MapView.scss
@@ -1,6 +1,7 @@
 .map-view {
   position: relative;
   width: 100%;
+  height: 100%;
 
   &__view-area-scale-button {
     position: absolute;
@@ -10,6 +11,7 @@
     padding: 12px;
     border-radius: 8px;
     background-color: $theme-white;
+    @include z-index(map-area-scale-button);
 
     &__img {
       width: 16px;
@@ -23,6 +25,11 @@
       font-size: 1.2rem;
       font-weight: bold;
     }
+  }
+
+  &__map-wrapper {
+    width: 100%;
+    height: 100%;
   }
 }
 
