--- a/src/assets/styles/foundation/variables.scss
+++ b/src/assets/styles/foundation/variables.scss
@@ -11,7 +11,8 @@ $sp: 480px;
 
 // z-index
 $z-index: (
-  overlay: 2,
-  header: 1,
-  bottom-navi: 1,
+  overlay: 3,
+  header: 2,
+  bottom-navi: 2,
+  map-area-scale-button: 1,
 );
